--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,10 @@
   [module.hugoVersion]
     extended = true
     min = "0.87.0"
+
+[params]
+  [params.head]
+      author = "Marwa Marso"
+      custom_css = "<url_to_custom_css_file>"
+      description = "Hi, I'm Marwa, and this is my website!"
+      keywords = ["some", "keywords", "to", "describe", "this"]
